--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lab 2 Ava</title>
+    <link rel="icon" type="image/png" href="logo.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -29,6 +30,6 @@
 
 </main>
 
-    <script src="intro.js"></script>
+    <script src="lab2.js"></script>
 </body>
 </html>
